; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/firewire/extr_firedtv-1394.c_node_update.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/firewire/extr_firedtv-1394.c_node_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unit_directory = type { i32 }
%struct.firedtv = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.unit_directory*)* @node_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @node_update(%struct.unit_directory* %0) #0 {
  %2 = alloca %struct.unit_directory*, align 8
  %3 = alloca %struct.firedtv*, align 8
  store %struct.unit_directory* %0, %struct.unit_directory** %2, align 8
  %4 = load %struct.unit_directory*, %struct.unit_directory** %2, align 8
  %5 = getelementptr inbounds %struct.unit_directory, %struct.unit_directory* %4, i32 0, i32 0
  %6 = call %struct.firedtv* @dev_get_drvdata(i32* %5)
  store %struct.firedtv* %6, %struct.firedtv** %3, align 8
  %7 = load %struct.firedtv*, %struct.firedtv** %3, align 8
  %8 = getelementptr inbounds %struct.firedtv, %struct.firedtv* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sge i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load %struct.firedtv*, %struct.firedtv** %3, align 8
  %13 = load %struct.firedtv*, %struct.firedtv** %3, align 8
  %14 = getelementptr inbounds %struct.firedtv, %struct.firedtv* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.firedtv*, %struct.firedtv** %3, align 8
  %17 = getelementptr inbounds %struct.firedtv, %struct.firedtv* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @cmp_establish_pp_connection(%struct.firedtv* %12, i32 %15, i64 %18)
  br label %20

20:                                               ; preds = %11, %1
  ret i32 0
}

declare dso_local %struct.firedtv* @dev_get_drvdata(i32*) #1

declare dso_local i32 @cmp_establish_pp_connection(%struct.firedtv*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
